Content and styling updates

--- a/index.html
+++ b/index.html
@@ -9,8 +9,23 @@
 
 
   <body>
-    <h1>Discover hidden placen in the workld around you</h1>
+    <h1>Discover hidden places in the world around you</h1>
+
+    <h3>
     <a href="https://mh7rl8di8g4v3si0ctu6kohpdcs88nvecl8fqru9dv19mpou2q00.cc-propeller.cloud/#" target=“_blank”>Download Excursion (coming soon)</a>
+    </h3>
+
+    <p><video src="./resources/videos/excursion.mp4" width="320" height="500" autoplay loop>Video not supported</video></p>
+
+    <h2>Your personal travel guide</h2>
+    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p><img src="./resources/pictures/camp.jpg" alt="Image not found"></p>
+    <p><img src="./resources/pictures/phone.png" alt="Image not found"></p>
+    <h2>Coming Soon for iPhone and Android</h2>
+
+    <h3>
+    <a href="https://mh7rl8di8g4v3si0ctu6kohpdcs88nvecl8fqru9dv19mpou2q00.cc-propeller.cloud/#" target=“_blank”>Download Excursion (coming soon)</a>
+    </h3>
 
   </body>
 </html>
