Formatting and footer updats

--- a/index.html
+++ b/index.html
@@ -11,21 +11,23 @@
   <body>
     <h1>Discover hidden places in the world around you</h1>
 
-    <h3>
-    <a href="https://mh7rl8di8g4v3si0ctu6kohpdcs88nvecl8fqru9dv19mpou2q00.cc-propeller.cloud/#" target=“_blank”>Download Excursion (coming soon)</a>
-    </h3>
+    <p><a class="link" href="#">Download Excursion (coming soon)</a></p>
 
-    <p><video src="./resources/videos/excursion.mp4" width="320" height="500" autoplay loop>Video not supported</video></p>
+    <p><video src="./resources/videos/excursion.mp4" autoplay loop alt="Video not supported"></p>
 
     <h2>Your personal travel guide</h2>
-    <p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+    <p class="desc">Excursion remembers places you like, and recommends new points of interest around you.</p>
+
     <p><img src="./resources/pictures/camp.jpg" alt="Image not found"></p>
     <p><img src="./resources/pictures/phone.png" alt="Image not found"></p>
+
     <h2>Coming Soon for iPhone and Android</h2>
 
-    <h3>
-    <a href="https://mh7rl8di8g4v3si0ctu6kohpdcs88nvecl8fqru9dv19mpou2q00.cc-propeller.cloud/#" target=“_blank”>Download Excursion (coming soon)</a>
-    </h3>
+    <p><a class="link" href="#">Download Excursion (coming soon)</a></p>
+
+    <div class="footer">
+      <p> 	&copy; Excursion</p>
+    </div>
 
   </body>
 </html>
